# BaRagmasChatbot-2.0-LangGraph

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
Test_Cases/Configuration 3/: factory.py  search_tool.py
Test_Cases/Configuration 3/Case 1/: Funktionsweise_und_Sicherheitsmechanismen_von_OpenAI_Sora.md
Test_Cases/Configuration 3/Case 2/: Zusammenfassung_der_neuen_Pflanzenregeln_für_neue_Mitarbeiter.md
Test_Cases/Configuration 3/Case 3/: Kulinarischer_Berlin-Guide_für_Familie_Müller.md
Test_Cases/Configuration 3/Case 4/: Warum_Langeweile_der_Schlüssel_zur_Kreativität_ist.md
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 1/: Parameter_1.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 2/: Parameter_2.txt  Policy.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 3/: Parameter_3.txt  profil_mueller.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 4/: Parameter_4.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 5/: parameter_5.txt  rag_erklaert.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 6/: firmen_philosophie.txt  parameter_6.txt
Test_Cases/LangGraph_Edition_1.0_vs_CrewAI_Edition/Case 7/: mikrowelle_erfindung.txt  parameter_7.txt
db/: chroma.sqlite3
src/ba_ragmas_chatbot/: chatbot.py  main.py  paths.py
src/ba_ragmas_chatbot/config/: agents.yaml  configs.yaml
src/ba_ragmas_chatbot/graph/: nodes.py  state.py  utils.py  workflow.py
src/ba_ragmas_chatbot/llm/: factory.py
src/ba_ragmas_chatbot/tools/: vectorstore.py
tests/: test_chatbot.py
(+7 files in other folders)
